Add firebase draft.
